versioned_docs/version-2025.1.1/professor/andre_alexandre_valentini.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "André Alexandre Valentini",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "História 3",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 11-2",
          students: [
            "EIN2023"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 12-2",
          students: [
            "AGO2023"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "História 4",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 1-4",
          students: [
            "EIN2022"
          ],
          time: "10:15 - 11:05",
          color: ""
        },
        {
          subject: "Legislação e Ética Profissional",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 9-2",
          students: [
            "ELE2024"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: []
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "História 2",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 15-2",
          students: [
            "EIN2024"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "História I",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 14-2",
          students: [
            "COM2024"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 12-2",
          students: [
            "AGO2023"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "História 1",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 6-2",
          students: [
            "EIN2025"
          ],
          time: "11:05 - 11:55",
          color: ""
        },
        {
          subject: "Ética, responsabilidade social e ambiental",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 3-1",
          students: [
            "TGC2024"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "História I",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 13-2",
          students: [
            "AGO2024"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# André Alexandre Valentini

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
