versioned_docs/version-2025.2.2/professor/andre_alexandre_valentini.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "André Alexandre Valentini",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: []
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "História I",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 14-2",
          students: [
            "COM2024"
          ],
          time: "10:15 - 11:05",
          color: ""
        },
        {
          subject: "História I",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 14-2",
          students: [
            "COM2024"
          ],
          time: "11:05 - 11:55",
          color: ""
        },
        {
          subject: "PCCC 2 - Sexualidade e gênero",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 8-2",
          students: [
            "BIO_ESPECIAL_1"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "11:05 - 11:55",
          color: ""
        },
        {
          subject: "Gestão da Sustentabilidade",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 5",
          students: [
            "TGC2024"
          ],
          time: "19:00 - 19:50",
          color: ""
        },
        {
          subject: "PCCC 2 - Sexualidade e gênero",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 8-2",
          students: [
            "BIO_ESPECIAL_1"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Didática geral",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 8-2",
          students: [
            "BIO_ESPECIAL_1"
          ],
          time: "19:00 - 19:50",
          color: ""
        },
        {
          subject: "Didática geral",
          size: 2,
          teachers: [
            "André Alexandre Valentini"
          ],
          classroom: "Sala 8-2",
          students: [
            "BIO_ESPECIAL_1"
          ],
          time: "21:00 - 21:50",
          color: ""
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# André Alexandre Valentini

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
